[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
ksi-double-ratchet = "0.1.3"
aes = "0.8.4"
cipher = "0.4.4"
cbc = "0.1.2"
block-padding = "0.3.3"
clear_on_drop = "0.2"
hkdf = "0.12.4"
hmac = "0.12.1"
rand_os = "0.1"
sha2 = "0.10.8"
subtle = "2.6.1"
x25519-dalek = "0.5"
crypto = "0.5.1"
generic-array = "0.14"
rand_core = "0.4"
base64 = "0.22.1"
